--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
-# /app/api/templates/basic-ts/node_modules
+/app/api/templates/basic-ts/node_modules
 
 
 # testing
