--- a/app/api/templates/tsconfig.json
+++ b/app/api/templates/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["basic/**"],
+  "include": ["basic/*"],
   "exclude": ["basic-ts"]
 }
